samples/_failures_safe/1761416077_e41c5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b5aa1c3.c: In function ‘main’:
./samples/SAFE/__tmp_0b5aa1c3.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
